--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "next": "9.5.3",
     "next-on-netlify": "^2.4.0",
     "react": "16.13.1",
+    "react-confetti": "^6.0.0",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
     "theme-ui": "^0.3.1",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "url-loader": "^4.1.0"
   }
 }
